config never ending fix